[gd_scene load_steps=2 format=3 uid="uid://nnk1c08o6sho"]

[ext_resource type="Script" uid="uid://b6in4362mwltd" path="res://level_select.gd" id="1_il3u1"]

[node name="level_select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_il3u1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -454.0
offset_top = -214.5
offset_right = 454.0
offset_bottom = 214.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Level_01" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 1"

[node name="Level_02" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 2
"

[node name="Level_03" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 3"

[node name="Level_04" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 4"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Level_05" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 6"

[node name="Level_06" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 6"

[node name="Level_07" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 7"

[node name="Level_08" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 8"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Level_09" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 9"

[node name="Level_10" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 10"

[node name="Level_11" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 11
"

[node name="Level_12" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 12
"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Level_13" type="Button" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 13"

[node name="Level_14" type="Button" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 14"

[node name="Level_15" type="Button" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 15"

[node name="Level_16" type="Button" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Level 16"

[node name="Back" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level_01" to="." method="_on_level_01_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level_02" to="." method="_on_level_02_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
